--- a/apps/intro/index.html
+++ b/apps/intro/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <base href="/notFound/">
+  <base href="/intro/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
-  <title>没找到 - Not Found</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <title>叶 - About Me</title>
 </head>
+
 <body>
-  The content you are looking for is not found!
+  About Me
+  <script src="./js/main.js"></script>
 </body>
+
 </html>
