--- a/apps/pingpong/index.html
+++ b/apps/pingpong/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-  <base href="pingpong/">
+  <base href="/pingpong/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-  <title>PingPong</title>
+  <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
+  <link rel="stylesheet" href="./css/main.css">
+  <title>乒乓 - PingPong</title>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
   <input type="text" id="name" maxlength="30" placeholder="Player name">
   <p class="errorMessage"></p>
   <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
-  <script src="./main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
