--- a/apps/home/index.html
+++ b/apps/home/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <base href="/notFound/">
+  <base href="/home/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
-  <title>没找到 - Not Found</title>
+  <title>主页 - Home</title>
 </head>
+
 <body>
-  The content you are looking for is not found!
+  Home
 </body>
+
 </html>
