feat: add webpack config for all apps, work on scripts

--- a/apps/hahaha/index.html
+++ b/apps/hahaha/index.html
@@ -6,11 +6,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+  <link rel="stylesheet" href="./dist/main.css">
   <title>哈哈哈 - Hahaha</title>
 </head>
 
 <body>
   Hahaha
+  <script src="./dist/main.js"></script>
 </body>
 
 </html>
