--- a/apps/notFound/index.html
+++ b/apps/notFound/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
+  <link rel="stylesheet" href="./dist/main.css">
   <title>没找到 - Not Found</title>
 </head>
 <body>
   The content you are looking for is not found!
+  <script src="./dist/main.js"></script>
 </body>
 </html>
