--- a/apps/home/index.html
+++ b/apps/home/index.html
@@ -6,11 +6,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
+  <link rel="stylesheet" href="./dist/main.css">
   <title>主页 - Home</title>
 </head>
 
 <body>
   Home
+  <script src="./dist/main.js"></script>
 </body>
 
 </html>
