--- a/apps/intro/index.html
+++ b/apps/intro/index.html
@@ -6,13 +6,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./dist/main.css">
   <title>葉 - About Me</title>
 </head>
 
 <body>
   About Me
-  <script src="./js/main.js"></script>
+  <script src="./dist/main.js"></script>
 </body>
 
 </html>
