--- a/apps/pingpong/index.html
+++ b/apps/pingpong/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./dist/main.css">
   <title>乒乓 - PingPong</title>
 </head>
 
@@ -22,8 +22,7 @@
   </div>
   <input type="text" id="name" maxlength="30" placeholder="Player name">
   <p class="errorMessage"></p>
-  <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
-  <script src="./js/main.js"></script>
+  <script src="./dist/main.js"></script>
 </body>
 
 </html>
