--- a/apps/intro/index.html
+++ b/apps/intro/index.html
@@ -7,11 +7,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
   <link rel="stylesheet" href="./dist/main.css">
-  <title>洋 - About Me</title>
+  <title>洋 - About</title>
 </head>
 
 <body>
-  About Me
+  <section class="profile">
+    <main class="wrap">
+      </br>
+      <h1>&nbsp;&nbsp;<small>哈喽, 我叫 </small><br />叶洲洋</h1>
+      <h1>&nbsp;&nbsp;<small>Hello, my name is </small><br />Zhouyang Ye</h1>
+    </main>
+  </section>
+  <section>
+    <div class="wrap">
+      <h2 style="padding-left:49px;">About me</h2>
+      <div class="container">
+        <img style="margin-bottom:16px;float:right;width:288px;border-radius:5px;" src="photo.jpg" alt="photo" />
+        <div style="color:#555;max-width:760px;font-size:22px;">
+          <p>
+            My name is Zhouyang Ye, I'm a front-end developer and I'm a recent graduate from University of New
+            Brunswick.
+            <br />
+            <br />
+            I'm currently living in Ottawa.
+            <br />
+            <br />
+            My hobbie includes video games, going to gym, travelling and eating delicious food. I like to play flute
+            during my leisure time and of course I love coding.
+            <br />
+            <br />
+            The world is full of suprise, there are still a lot of things that I want to try and enjoy. I'll never
+            stop gaining new experience and updating my knowledge, I am forever a student.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="./dist/main.js"></script>
 </body>
 
