feat: intro page

--- a/apps/intro/index.html
+++ b/apps/intro/index.html
@@ -14,32 +14,28 @@
   <section class="profile">
     <main class="wrap">
       </br>
-      <h1>&nbsp;&nbsp;<small>哈喽, 我叫 </small><br />叶洲洋</h1>
-      <h1>&nbsp;&nbsp;<small>Hello, my name is </small><br />Zhouyang Ye</h1>
+      <h1>&nbsp;&nbsp;<small>哈喽, </small><br />大家好</h1>
+      <h1>&nbsp;&nbsp;<small>Hello, </small><br />My friends</h1>
     </main>
   </section>
-  <section>
+  <section class="about">
     <div class="wrap">
-      <h2 style="padding-left:49px;">About me</h2>
+      <h2>About</h2>
       <div class="container">
-        <img style="margin-bottom:16px;float:right;width:288px;border-radius:5px;" src="photo.jpg" alt="photo" />
-        <div style="color:#555;max-width:760px;font-size:22px;">
-          <p>
-            My name is Zhouyang Ye, I'm a front-end developer and I'm a recent graduate from University of New
-            Brunswick.
-            <br />
-            <br />
-            I'm currently living in Ottawa.
-            <br />
-            <br />
-            My hobbie includes video games, going to gym, travelling and eating delicious food. I like to play flute
-            during my leisure time and of course I love coding.
-            <br />
-            <br />
-            The world is full of suprise, there are still a lot of things that I want to try and enjoy. I'll never
-            stop gaining new experience and updating my knowledge, I am forever a student.
-          </p>
-        </div>
+        <img class="profile-pic" alt="photo" />
+        <pre class="intro">
+  My name is Zhouyang Ye, I'm a front-end developer and I'm a recent graduate from University of New
+Brunswick.
+
+
+  I'm currently living in Ottawa.
+My hobbie includes video games, going to gym, travelling and eating delicious food. I like to play flute
+during my leisure time and of course I love coding.
+
+
+  The world is full of suprise, there are still a lot of things that I want to try and enjoy. I'll never
+stop gaining new experience and updating my knowledge, I am forever a student.
+        </pre>
       </div>
     </div>
   </section>
