feat: intro page, and source map

--- a/apps/intro/index.html
+++ b/apps/intro/index.html
@@ -14,8 +14,8 @@
   <section class="profile">
     <main class="wrap">
       </br>
-      <h1>&nbsp;&nbsp;<small>哈喽, </small><br />大家好</h1>
-      <h1>&nbsp;&nbsp;<small>Hello, </small><br />My friends</h1>
+      <h1 class="title">&nbsp;&nbsp;<small>哈喽, </small><br />大家好</h1>
+      <h1 class="title">&nbsp;&nbsp;<small>Hello, </small><br />My friends</h1>
     </main>
   </section>
   <section class="about">
@@ -37,6 +37,33 @@ during my leisure time and of course I love coding.
 stop gaining new experience and updating my knowledge, I am forever a student.
         </pre>
       </div>
+    </div>
+  </section>
+  <section class="home-title">
+    <h2 class="title">Home</h2>
+  </section>
+  <section class="home">
+    <div class="wrap" >
+      <h2>Home</h2>
+      Home Introduction
+    </div>
+  </section>
+  <section class="algorithms-title">
+    <h2 class="title">Algorithms</h2>
+  </section>
+  <section class="algorithms">
+    <div class="wrap" >
+      <h2>Algorithms</h2>
+      Algorithms Introduction
+    </div>
+  </section>
+  <section class="apps-title">
+    <h2 class="title">Apps</h2>
+  </section>
+  <section class="apps">
+    <div class="wrap" >
+      <h2>Apps</h2>
+      Apps Introduction
     </div>
   </section>
   <script src="./dist/main.js"></script>
