feat: intro page

--- a/apps/intro/index.html
+++ b/apps/intro/index.html
@@ -15,7 +15,7 @@
     <main class="wrap">
       </br>
       <h1 class="title">&nbsp;&nbsp;<small>哈喽, </small><br />大家好</h1>
-      <h1 class="title">&nbsp;&nbsp;<small>Hello, </small><br />My friends</h1>
+      <h1 class="title">&nbsp;&nbsp;<small>Hello, </small><br />Everyone</h1>
     </main>
   </section>
   <section class="about">
@@ -24,46 +24,51 @@
       <div class="container">
         <img class="profile-pic" alt="photo" />
         <pre class="intro">
-  My name is Zhouyang Ye, I'm a front-end developer and I'm a recent graduate from University of New
-Brunswick.
 
+    做这个网站并没有特别明确的目的性，只是感觉工作以后自己的视野反而变得越来越窄了。可能在某个特定的方向上会变得比以前更专业，但是对全局上的掌握有点匮乏。
 
-  I'm currently living in Ottawa.
-My hobbie includes video games, going to gym, travelling and eating delicious food. I like to play flute
-during my leisure time and of course I love coding.
+    从技术层面来说，在一个具有一定规模的公司里，分功会比较明确。有的团队负责架构设计开发，有的团队开发各种库和组件，有点团队开发框架和构建工具，还有的团队负责开发应用等等。
 
+    对于个人来说，每个团队之间都是完全独立的，除了自己所属团队的项目以外，其它的部分基本就是一团迷雾。
 
-  The world is full of suprise, there are still a lot of things that I want to try and enjoy. I'll never
-stop gaining new experience and updating my knowledge, I am forever a student.
+    当然，在现实工作中，并不需要你去了解一个大型应用开发过程中的所有技术环节。但是对于我来说，编程并不仅仅只是工作，也是我的一个爱好。就像是玩一款经营模拟类游戏，当你造出一座完整的城市，心里会有很强的满足感。所以我不想只了解其中微小的一部分，我想要尝试着去掌握一个完整的程序开发出来的全过程，从架构到前后端开发到数据库等等等等。
+
+    所以仅以此网站作为自己练手的工具，开发一些自己觉得有意思的东西，其中会尝试用一些比较前沿时髦的新技术~ 踩一踩坑，锻炼一下自己技术层面的能力。
+
+    网站使用原生ts和js，不使用任何框架，从底层开始开发。会用一些外界的工具和库，但能不用就尽量不用。
         </pre>
       </div>
     </div>
   </section>
-  <section class="home-title">
-    <h2 class="title">Home</h2>
+  <section class="frontend-title">
+    <h2 class="title">Frontend</h2>
   </section>
-  <section class="home">
+  <section class="frontend">
     <div class="wrap" >
-      <h2>Home</h2>
-      Home Introduction
+      <h2>前端</h2>
+      <section class="paragraph-one">
+        <h3>前端准备做八个模块：admin、algorithms、common、hahaha、home、intro、notFound、pingpong。</h3>
+        <pre>
+        </pre>
+      </section>
     </div>
   </section>
-  <section class="algorithms-title">
-    <h2 class="title">Algorithms</h2>
+  <section class="backend-title">
+    <h2 class="title">Backend</h2>
   </section>
-  <section class="algorithms">
+  <section class="backend">
     <div class="wrap" >
-      <h2>Algorithms</h2>
-      Algorithms Introduction
+      <h2>后端</h2>
+      Backend Introduction
     </div>
   </section>
-  <section class="apps-title">
-    <h2 class="title">Apps</h2>
+  <section class="devtools-title">
+    <h2 class="title">Dev Tools</h2>
   </section>
-  <section class="apps">
+  <section class="devtools">
     <div class="wrap" >
-      <h2>Apps</h2>
-      Apps Introduction
+      <h2>开发小工具</h2>
+      Dev tools Introduction
     </div>
   </section>
   <script src="./dist/main.js"></script>
