feat: add react module, fix loading, update readme

--- a/apps/intro/index.html
+++ b/apps/intro/index.html
@@ -25,7 +25,7 @@
         <div class="container">
           <img class="profile-pic" alt="photo" />
           <pre class="intro">
-    做这个网站并没有特别明确的目的性，只是感觉工作以后自己的视野反而变得越来越窄了。可能在某个特定的方向上会变得比以前更专业，但是对全局上的掌握有点匮乏。
+    做这个网站并没有特别明确的目的性，只是感觉工作以后自己的视野反而变得越来越窄了。可能在某个特定的领域会越来越深入，但是对全局上的了解有点匮乏。
 
     从技术层面来说，在一个具有一定规模的公司里，分功会比较明确。有的团队负责架构设计开发，有的团队开发各种库和组件，有点团队开发框架和构建工具，还有的团队负责开发应用等等。
 
