--- a/apps/pingpong/index.html
+++ b/apps/pingpong/index.html
@@ -15,6 +15,7 @@
   <div id="wrap">
     <canvas id="table" width="600" height="700"></canvas>
     <div id="ready-icon"></div>
+    <div id="announcement" class="hide"></div>
   </div>
   <input type="text" id="name" maxlength="30" placeholder="Player name">
   <p id="error-message"></p>
