feat: add presentation video

--- a/apps/hahaha/index.html
+++ b/apps/hahaha/index.html
@@ -8,37 +8,17 @@
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
   <link rel="stylesheet" href="./dist/main.css">
   <title>哈哈哈 - Hahaha</title>
+  <style>
+    video {
+      display: block;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 
 <body>
-  Hahaha
-  <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-    <style>
-      div {
-        color: white;
-        font: 18px serif;
-        height: 100%;
-        overflow: auto;
-      }
-    </style>
-
-    <polygon points="5,5 195,10 185,185 10,195" />
-
-    <!-- Common use case: embed HTML text into SVG -->
-    <foreignObject x="20" y="20" width="160" height="160">
-      <!--
-        In the context of SVG embedded in an HTML document, the XHTML 
-        namespace could be omitted, but it is mandatory in the 
-        context of an SVG document
-      -->
-      <div xmlns="http://www.w3.org/1999/xhtml">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Sed mollis mollis mi ut ultricies. Nullam magna ipsum,
-        porta vel dui convallis, rutrum imperdiet eros. Aliquam
-        erat volutpat.
-      </div>
-    </foreignObject>
-  </svg>
+  <video src="/@resources/static/videos/presentation.mp4" controls="controls">Your browser does not support video
+    tag!</video>
   <script src="./dist/main.js"></script>
 </body>
 
