--- a/apps/intro/index.html
+++ b/apps/intro/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
   <link rel="stylesheet" href="./dist/main.css">
-  <title>洋 - About</title>
+  <title>梅城 - About</title>
 </head>
 
 <body>
