--- a/apps/stories/index.html
+++ b/apps/stories/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-  <base href="/algorithms/">
+  <base href="/stories/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
   <link rel="stylesheet" href="./dist/main.css">
-  <title>算法 - Algorithms</title>
+  <title>故事 - stories</title>
 </head>
 
 <body>
-  Algorithms
+  <div id="app"></div>
   <script src="./dist/main.js"></script>
 </body>
 
