--- a/apps/notFound/index.html
+++ b/apps/notFound/index.html
@@ -9,7 +9,7 @@
   <title>没找到 - Not Found</title>
 </head>
 <body>
-  The content you are looking for is not found!
+  <canvas id="app">The content you are looking for does not exist!</canvas>
   <script src="./dist/main.js"></script>
 </body>
 </html>
