--- a/apps/intro/index.html
+++ b/apps/intro/index.html
@@ -5,8 +5,8 @@
   <base href="/intro/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/png" href="./favicon.png" />
-  <link rel="stylesheet" href="./dist/main.css">
+  <link rel="shortcut icon" type="image/png" href="./favicon.png">
+  <link rel="stylesheet" href="./dist/main.css" media="all">
   <title>关于 - About</title>
 </head>
 
