feat: upgrade webpack and a bunch of loaders

--- a/apps/home/src/legacy/index.html
+++ b/apps/home/src/legacy/index.html
@@ -25,8 +25,14 @@
     </canvas>
     <canvas id="hud" width="400" height="400" style="position: absolute; z-index: 1"></canvas>
   </div>
+  <audio id="audiotag1" src="http://nifter.com/sound_effects/blips_bangs_beeps/futurebeep3_NifterDotCom.wav"
+    preload="auto"></audio>
 
-  <script src="./dist/main.js"></script>
+  <script src="./src/vendor/webgl-utils.js"></script>
+  <script src="./src/vendor/webgl-debug.js"></script>
+  <script src="./src/vendor/cuon-utils.js"></script>
+  <script src="./src/vendor/cuon-matrix.js"></script>
+  <script src="./src/index.js"></script>
 </body>
 
 </html>
