--- a/apps/home/index.html
+++ b/apps/home/index.html
@@ -6,15 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
-  <style>
-    #app {
-      position: absolute;
-      width: 400px;
-      height: 400px;
-      left: calc(50% - 200px);
-      top: calc(40% - 200px);
-    }
-  </style>
+  <link rel="stylesheet" href="./dist/main.css">
   <title>城 - Town</title>
 </head>
 
