feat: set up threejs home page

--- a/apps/home/index.html
+++ b/apps/home/index.html
@@ -12,10 +12,7 @@
 
 <body>
   <div id="app">
-    <canvas id="webgl" width="400" height="400" style="position: absolute; z-index: 0">
-      Please use a browser that supports "canvas"
-    </canvas>
-    <canvas id="hud" width="400" height="400" style="position: absolute; z-index: 1"></canvas>
+    <div id="ui"></div>
   </div>
 
   <script src="./dist/main.js"></script>
