feat: home loading page

--- a/apps/home/index.html
+++ b/apps/home/index.html
@@ -14,6 +14,12 @@
   <div id="app">
     <div id="ui"></div>
   </div>
+  <div id="loading">
+    <div>
+      <img src="/@resources/static/gif/pikachu.gif">
+      <div id="progress">0.0%</div>
+    </div>
+  </div>
 
   <script src="./dist/main.js"></script>
 </body>
