--- a/apps/majiang/index.html
+++ b/apps/majiang/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
   <link rel="stylesheet" href="./dist/main.css">
-  <title>建德麻将 - Majiang</title>
+  <title>麻将 - Majiang</title>
 </head>
 
 <body>
