--- a/apps/stories/index.html
+++ b/apps/stories/index.html
@@ -7,11 +7,259 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
   <link rel="stylesheet" href="./dist/main.css">
+  <style>
+    #background {
+      display: block;
+      position: fixed;
+      width: 100vw;
+      height: 100vh;
+    }
+  </style>
   <title>故事 - stories</title>
 </head>
 
 <body>
+  <canvas id="background"></canvas>
   <div id="app"></div>
+  <script src="./src/vendors/anime.min.js"></script>
+  <script>
+    (function () {
+      /*
+        The MIT License (MIT)
+
+        Copyright (c) 2022 by Alex Zaworski (https://codepen.io/alexzaworski/pen/mEkvAG)
+
+        Permission is hereby granted, free of charge, to any person obtaining a copy
+        of this software and associated documentation files (the "Software"), to deal
+        in the Software without restriction, including without limitation the rights
+        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+        copies of the Software, and to permit persons to whom the Software is
+        furnished to do so, subject to the following conditions:
+
+        The above copyright notice and this permission notice shall be included in all
+        copies or substantial portions of the Software.
+
+        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+        SOFTWARE.
+      */
+
+      var c = document.getElementById("background");
+      var ctx = c.getContext("2d");
+      var cH;
+      var cW;
+      var bgColor = "#FF6138";
+      var animations = [];
+      var circles = [];
+
+      var colorPicker = (function () {
+        var colors = ["#FF6138", "#FFBE53", "#2980B9", "#282741"];
+        var index = 0;
+
+        function next() {
+          index = index++ < colors.length - 1 ? index : 0;
+          return colors[index];
+        }
+
+        function current() {
+          return colors[index]
+        }
+        return {
+          next: next,
+          current: current
+        }
+      })();
+
+      function removeAnimation(animation) {
+        var index = animations.indexOf(animation);
+        if (index > -1) animations.splice(index, 1);
+      }
+
+      function calcPageFillRadius(x, y) {
+        var l = Math.max(x - 0, cW - x);
+        var h = Math.max(y - 0, cH - y);
+        return Math.sqrt(Math.pow(l, 2) + Math.pow(h, 2));
+      }
+
+      function addClickListeners() {
+        document.addEventListener("touchstart", handleEvent);
+        document.addEventListener("mousedown", handleEvent);
+      };
+
+      function handleEvent(e) {
+        if (e.touches) {
+          e.preventDefault();
+          e = e.touches[0];
+        }
+        var currentColor = colorPicker.current();
+        var nextColor = colorPicker.next();
+        var targetR = calcPageFillRadius(e.clientX, e.clientY);
+        var rippleSize = Math.min(200, (cW * .4));
+        var minCoverDuration = 750;
+
+        var pageFill = new Circle({
+          x: e.clientX,
+          y: e.clientY,
+          r: 0,
+          fill: nextColor
+        });
+        var fillAnimation = anime({
+          targets: pageFill,
+          r: targetR,
+          duration: Math.max(targetR / 2, minCoverDuration),
+          easing: "easeOutQuart",
+          complete: function () {
+            bgColor = pageFill.fill;
+            removeAnimation(fillAnimation);
+          }
+        });
+
+        var ripple = new Circle({
+          x: e.clientX,
+          y: e.clientY,
+          r: 0,
+          fill: currentColor,
+          stroke: {
+            width: 3,
+            color: currentColor
+          },
+          opacity: 1
+        });
+        var rippleAnimation = anime({
+          targets: ripple,
+          r: rippleSize,
+          opacity: 0,
+          easing: "easeOutExpo",
+          duration: 900,
+          complete: removeAnimation
+        });
+
+        var particles = [];
+        for (var i = 0; i < 32; i++) {
+          var particle = new Circle({
+            x: e.clientX,
+            y: e.clientY,
+            fill: currentColor,
+            r: anime.random(24, 48)
+          })
+          particles.push(particle);
+        }
+        var particlesAnimation = anime({
+          targets: particles,
+          x: function (particle) {
+            return particle.x + anime.random(rippleSize, -rippleSize);
+          },
+          y: function (particle) {
+            return particle.y + anime.random(rippleSize * 1.15, -rippleSize * 1.15);
+          },
+          r: 0,
+          easing: "easeOutExpo",
+          duration: anime.random(1000, 1300),
+          complete: removeAnimation
+        });
+        animations.push(fillAnimation, rippleAnimation, particlesAnimation);
+      }
+
+      function extend(a, b) {
+        for (var key in b) {
+          if (b.hasOwnProperty(key)) {
+            a[key] = b[key];
+          }
+        }
+        return a;
+      }
+
+      var Circle = function (opts) {
+        extend(this, opts);
+      }
+
+      Circle.prototype.draw = function () {
+        ctx.globalAlpha = this.opacity || 1;
+        ctx.beginPath();
+        ctx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false);
+        if (this.stroke) {
+          ctx.strokeStyle = this.stroke.color;
+          ctx.lineWidth = this.stroke.width;
+          ctx.stroke();
+        }
+        if (this.fill) {
+          ctx.fillStyle = this.fill;
+          ctx.fill();
+        }
+        ctx.closePath();
+        ctx.globalAlpha = 1;
+      }
+
+      var animate = anime({
+        duration: Infinity,
+        update: function () {
+          ctx.fillStyle = bgColor;
+          ctx.fillRect(0, 0, cW, cH);
+          animations.forEach(function (anim) {
+            anim.animatables.forEach(function (animatable) {
+              animatable.target.draw();
+            });
+          });
+        }
+      });
+
+      var resizeCanvas = function () {
+        cW = window.innerWidth;
+        cH = window.innerHeight;
+        c.width = cW * devicePixelRatio;
+        c.height = cH * devicePixelRatio;
+        ctx.scale(devicePixelRatio, devicePixelRatio);
+      };
+
+      (function init() {
+        resizeCanvas();
+        if (window.CP) {
+          // CodePen's loop detection was causin' problems
+          // and I have no idea why, so...
+          window.CP.PenTimer.MAX_TIME_IN_LOOP_WO_EXIT = 6000;
+        }
+        window.addEventListener("resize", resizeCanvas);
+        addClickListeners();
+        if (!!window.location.pathname.match(/fullcpgrid/)) {
+          startFauxClicking();
+        }
+        handleInactiveUser();
+      })();
+
+      function handleInactiveUser() {
+        var inactive = setTimeout(function () {
+          fauxClick(cW / 2, cH / 2);
+        }, 2000);
+
+        function clearInactiveTimeout() {
+          clearTimeout(inactive);
+          document.removeEventListener("mousedown", clearInactiveTimeout);
+          document.removeEventListener("touchstart", clearInactiveTimeout);
+        }
+
+        document.addEventListener("mousedown", clearInactiveTimeout);
+        document.addEventListener("touchstart", clearInactiveTimeout);
+      }
+
+      function startFauxClicking() {
+        setTimeout(function () {
+          fauxClick(anime.random(cW * .2, cW * .8), anime.random(cH * .2, cH * .8));
+          startFauxClicking();
+        }, anime.random(200, 900));
+      }
+
+      function fauxClick(x, y) {
+        var fauxClick = new Event("mousedown");
+        fauxClick.pageX = x;
+        fauxClick.pageY = y;
+        document.dispatchEvent(fauxClick);
+      }
+    })()
+  </script>
   <script src="./dist/main.js"></script>
 </body>
 
