--- a/apps/intro/index.html
+++ b/apps/intro/index.html
@@ -8,10 +8,26 @@
   <link rel="shortcut icon" type="image/png" href="./favicon.png">
   <link rel="stylesheet" href="./dist/main.css" media="all">
   <title>关于 - About</title>
+  <style>
+    #background {
+      display: none;
+      position: fixed;
+      width: 100vw;
+      height: 100vh;
+    }
+    @media only screen and (max-width: 700px) {
+      #background {
+        display: block;
+      }
+    }
+  </style>
 </head>
 
 <body>
+  <canvas id="background"></canvas>
   <div id="app"></div>
+  <script src="./vendors/anime.min.js"></script>
+  <script src="./vendors/script.js"></script>
   <script src="./dist/main.js"></script>
 </body>
 
