--- a/apps/stories/index.html
+++ b/apps/stories/index.html
@@ -8,10 +8,34 @@
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
   <link rel="stylesheet" href="./dist/main.css">
   <title>分享 - stories</title>
+  <style>
+    #background {
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: 100vh;
+    }
+  </style>
 </head>
 
 <body>
+  <div id="background"></div>
   <div id="app"></div>
+  <script src="./vendors/three.min.js"></script>
+  <script src="./vendors/vanta.min.js"></script>
+  <script>
+    VANTA.WAVES({
+      el: "#background",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00
+    })
+  </script>
   <script src="./dist/main.js"></script>
 </body>
 
