feat: fix stories sliding effects, optimize backend route finding algorithm

--- a/apps/test/index.html
+++ b/apps/test/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <base href="/notFound/">
+  <base href="/test/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
   <link rel="stylesheet" href="./dist/main.css">
-  <title>没找到 - Not Found</title>
+  <title>测试 - Test</title>
 </head>
 <body>
-  <canvas id="app">The content you are looking for does not exist!</canvas>
+  <canvas id="app">Hello!</canvas>
   <script src="./dist/main.js"></script>
 </body>
 </html>
