--- a/apps/stories/index.html
+++ b/apps/stories/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
-  <base href="/stories/">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/png" href="./favicon.png" />
-  <link rel="stylesheet" href="./dist/main.css">
   <title>分享 - stories</title>
   <style>
     #background {
@@ -36,7 +28,10 @@
       scaleMobile: 1.00
     })
   </script>
-  <script src="./dist/main.js"></script>
+  <external>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script crossorigin="anonymous" src="https://cdn.bootcdn.net/ajax/libs/react/18.2.0-next-ce1386028-20220428/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script crossorigin="anonymous" src="https://cdn.bootcdn.net/ajax/libs/react-dom/18.2.0-next-ce1386028-20220428/umd/react-dom.production.min.js"></script>
+  </external>
 </body>
-
-</html>
