feat: improve external link management

--- a/apps/stories/index.html
+++ b/apps/stories/index.html
@@ -29,9 +29,13 @@
     })
   </script>
   <external>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script crossorigin="anonymous" src="https://cdn.bootcdn.net/ajax/libs/react/18.2.0-next-ce1386028-20220428/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-    <script crossorigin="anonymous" src="https://cdn.bootcdn.net/ajax/libs/react-dom/18.2.0-next-ce1386028-20220428/umd/react-dom.production.min.js"></script>
+    <js>
+      <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+      <script crossorigin="anonymous" src="https://cdn.bootcdn.net/ajax/libs/react/18.2.0-next-ce1386028-20220428/umd/react.production.min.js"></script>
+      <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+      <script crossorigin="anonymous" src="https://cdn.bootcdn.net/ajax/libs/react-dom/18.2.0-next-ce1386028-20220428/umd/react-dom.production.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
+      <script src="//unpkg.com/@highlightjs/cdn-assets@11.5.1/highlight.min.js"></script>
+    </js>
   </external>
 </body>
