feat: change profile, improve logic to hide and show cat, fix some bugs, increase touch sensitivity

--- a/apps/intro/index.html
+++ b/apps/intro/index.html
@@ -59,8 +59,8 @@
       width: 306px;
       height: 230px;
       z-index: 16;
-      top: -73px;
-      left: -108px;
+      top: -118px;
+      left: -153px;
     }
 
     #cat.hide {
@@ -150,7 +150,7 @@
   <canvas id="background"></canvas>
   <div id="background2"></div>
   <div id="app"></div>
-  <div id="hole" class="hide active">
+  <div id="hole" class="hide hidden active">
     <div id="cat" class="hide">
       <div class="handle">
         <div class="left"></div>
