--- a/apps/admin/index.html
+++ b/apps/admin/index.html
@@ -1,4 +1,5 @@
 <head>
+  <meta name="theme-color" content="#c8e329" >
   <link rel="stylesheet" href="./vendors/style.css">
   <title>管理 - Admin</title>
 </head>
