feat: set up threejs shaders

--- a/apps/test/index.html
+++ b/apps/test/index.html
@@ -3,5 +3,8 @@
   <title>测试 - Test</title>
 </head>
 <body>
-  <canvas id="app">Hello!</canvas>
+  <div class="buttons">
+    <div class="btn">Physics</div>
+    <div class="btn">Ray tracing</div>
+  </div>
 </body>
