feat: add support for running shaders

--- a/apps/test/index.html
+++ b/apps/test/index.html
@@ -5,6 +5,6 @@
 <body>
   <div class="buttons">
     <div class="btn">Physics</div>
-    <div class="btn">Ray tracing</div>
+    <div class="btn">Shader toy</div>
   </div>
 </body>
