feat: integrated vue

--- a/apps/admin/index.html
+++ b/apps/admin/index.html
@@ -9,8 +9,8 @@
     <canvas id="demo-canvas"></canvas>
   </div>
   <div id="app"></div>
-  <script src='./vendors/EasePack.min.js'></script>
-  <script src='./vendors/rAF.js'></script>
-  <script src='./vendors/TweenLite.min.js'></script>
+  <script src="./vendors/EasePack.min.js"></script>
+  <script src="./vendors/rAF.js"></script>
+  <script src="./vendors/TweenLite.min.js"></script>
   <script  src="./vendors/script.js"></script>
 </body>
