--- a/apps/majiang/index.html
+++ b/apps/majiang/index.html
@@ -4,12 +4,11 @@
 </head>
 
 <body>
-  <h3 id="oppo-name">Waiting for player . . .</h3>
-  <div id="wrap">
-    <canvas id="table" width="600" height="700"></canvas>
-    <div id="ready-icon"></div>
-    <div id="announcement" class="hide"></div>
-  </div>
-  <input type="text" id="name" maxlength="30" placeholder="Player name">
-  <p id="error-message"></p>
+  <div id="app"></div>
+  <external>
+    <js>
+      <script crossorigin src="https://cdn.bootcdn.net/ajax/libs/vue/3.2.37/vue.global.prod.min.js"></script>
+      <script crossorigin src="https://cdn.bootcdn.net/ajax/libs/vue-router/4.1.3/vue-router.global.prod.min.js"></script>
+    </js>
+  </external>
 </body>
